WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32678
Web Inspector: Do not lose original request for non-main resource redirects.
https://bugs.webkit.org/show_bug.cgi?id=32678
Summary
Web Inspector: Do not lose original request for non-main resource redirects.
Pavel Feldman
Reported
2009-12-17 12:33:52 PST
If an image source has redirects, information about these redirects' requests is currently being overwritten.
Attachments
[PATCH] Proposed fix.
(5.31 KB, patch)
2009-12-17 12:49 PST
,
Pavel Feldman
timothy
: review+
pfeldman
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pavel Feldman
Comment 1
2009-12-17 12:49:21 PST
Created
attachment 45101
[details]
[PATCH] Proposed fix.
WebKit Review Bot
Comment 2
2009-12-17 12:51:07 PST
style-queue ran check-webkit-style on
attachment 45101
[details]
without any errors.
Pavel Feldman
Comment 3
2009-12-17 14:03:18 PST
Comment on
attachment 45101
[details]
[PATCH] Proposed fix. I'll land this manually.
Pavel Feldman
Comment 4
2009-12-22 08:21:30 PST
Committing to
http://svn.webkit.org/repository/webkit/trunk
... M WebCore/ChangeLog M WebCore/inspector/InspectorResource.cpp M WebCore/inspector/front-end/Resource.js M WebCore/inspector/front-end/inspector.js Committed
r52487
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug