2009-12-21  Pavel Feldman  <pfeldman@chromium.org>

Reviewed by Timothy Hatcher.

        Web Inspector: Do not lose original request for non-main resource redirects.

        https://bugs.webkit.org/show_bug.cgi?id=32678

        * inspector/InspectorResource.cpp:
        (WebCore::InspectorResource::appendRedirect):
        * inspector/front-end/Resource.js:
        (WebInspector.Resource):
        * inspector/front-end/inspector.js:
        (WebInspector.updateResource):


Canonical link: https://commits.webkit.org/43900@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52487 268f45cc-cd09-0410-ab3c-d52691b4dbfc